<resources>
    <string name="app_name">Ex11</string>
    <string name="catchMyDialog">Hosting activity must implement the interface ResultListener</string>
    <string name="chose">Chose a country to add to the list</string>
    <string name="delete">Are you sure you want to delete this country?></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="shownList">Remember countries shown</string>
    <string name="name">Your name</string>
    <string name="user">userName</string>
    <string name="Summary_backColor">This is the background color of \'details\' screen. \n Current value: %s</string>
    <string name="title_refreshOnStart">Refresh data when application starts</string>
    <string name="summary_refreshOnStart">The countries data will be automatically refreshed from the web upon starting the application</string>
    <string name="closing">Are you sure?</string>
    <string name="add">Add new</string>
    <string name="host">Hosting activity must imlements the interface ResultListerner</string>
    <string name="userName">%s</string>
</resources>
