<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="false"
        android:title="@string/shownList"
        android:key="toSaveList" />

    <EditTextPreference
        android:defaultValue="Default value"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/name"
        android:key="@string/user"
        android:summary="@string/userName"/>

    <ListPreference
        android:defaultValue="1"
        android:title="background color"
        android:entries="@array/listColors"
        android:entryValues="@array/listColorsValues"
        android:key="backColor"
        android:summary="@string/Summary_backColor"/>

    <PreferenceScreen
        android:title="Advanced setting">
        <PreferenceCategory
            android:title="load options">
        <CheckBoxPreference
            android:key="refreshOnStart"
            android:title="@string/title_refreshOnStart"
            android:summary="@string/summary_refreshOnStart"
            android:defaultValue="false"/>
        </PreferenceCategory>
        </PreferenceScreen>


</PreferenceScreen>